# AICoreAndShared

./: .env.example  .gitignore  Makefile  README.md  _build_log.txt  _build_result.txt  index.html  pyproject.toml  requirements.txt
UI/: Final PRD- Enterprise AI Core & Shared Library.docx  PRD_Enterprise_AI_Core_Library.md  README.md  _write_app.cjs  enterprise core and shared part 2.md  metadata.json  package-lock.json  package.json  vite.config.ts
UI/docs/: 01-core-library.md  02-shared-library.md  02-shared-library.md.new  03-architecture-workflows.md  04-trends-design-patterns.md  05-enterprise-operations.md  06-domain-examples.md  GAP_REPORT.md
UI/public/: 404.html
UI/src/: App.backup.tsx  App.new.tsx  App.tsx  index.css  types.ts
UI/src/components/: AnimatedPipeline.tsx  Layout.tsx  WorkflowRenderer.tsx  ui.tsx
UI/src/pages/: ArchitecturePage.tsx  CoreLibraryPage.tsx  DomainExamplesPage.tsx  EnterprisePage.tsx  HomePage.tsx  PipelinesPage.tsx  PlaygroundPage.tsx  SharedLibraryPage.tsx  TrendsPage.tsx  WorkflowsPage.tsx
ai_core/: __init__.py  agents.py  chunking.py  config.py  deployment.py  embeddings.py  eval.py  frameworks.py  llm.py  prompts.py  rag.py  recovery.py  reranker.py  schemas.py  search.py  vectorstore.py
ai_shared/: __init__.py  auth.py  cache.py  compliance.py  cost.py  experiments.py  governance.py  logging_utils.py  memory.py  models.py  observability.py  plugins.py  resilience.py  security.py  tokens.py
assets/: index-BAuJWmvm.js  index-BDmsjqvM.css  index-BIZ8DLe4.js  index-DOkBv0Ml.css  index-DrtEyqTq.js  index-Dw7om7uB.css  index-Dyp3SMgx.js
examples/: 01_basic_rag.py  02_agent_system.py  03_compliance_governance.py  04_cost_optimization.py  05_caching_resilience.py  06_full_enterprise_pipeline.py  07_medical_domain.py  08_ecommerce_domain.py  09_real_estate_domain.py  10_loan_processing_domain.py
tests/test_core/: __init__.py  test_agents.py  test_chunking.py  test_rag.py  test_schemas.py
tests/test_shared/: __init__.py  test_cache.py  test_compliance.py  test_cost.py  test_governance.py  test_security.py  test_tokens.py
